<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.reddot.mvvmtodo.ui.signUp.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="18sp"
            android:textColor="@color/colorTitle"
            android:text="@string/create_new_account" />

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSubTitle"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/please_enter_details" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="10dp"
            style="@style/RoundedTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_sub_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:text="@={viewModel.email}"
                android:hint="@string/email"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:textColor="@color/black"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_phone_layout"
            android:layout_width="match_parent"
            style="@style/RoundedTextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ti_email_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="8dp"
                android:text="@={viewModel.phone}"
                android:hint="@string/phone"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:textColor="@color/black"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            style="@style/RoundedTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/ti_phone_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:text="@={viewModel.password}"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorHint"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/ti_layout_password"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/password_condition" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:passwordToggleEnabled="true"
            style="@style/RoundedTextInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_condition">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:text="@={viewModel.confirmPassword}"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:background="@android:color/transparent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/ti_confirm_password"/>

        <LinearLayout
            android:id="@+id/ll_sign_up_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_rounded_border_edit_text"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_submit"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_google"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorTitle"
                android:text="@string/sign_up_google"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_already_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ll_sign_up_google"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_already_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorHint"
                android:layout_marginEnd="8dp"
                android:text="@string/already_have_account"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/login" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>